<resources>
    <string name="app_name">PrenosRobe</string>
    <string name="username">Korisničko ime</string>
    <string name="username_empty">Korisničko ime mora biti uneto.</string>
    <string name="username_used">Korisničko ime je već u upotrebi.</string>
    <string name="password">Lozinka</string>
    <string name="password_empty">Lozinka mora biti uneta.</string>
    <string name="password_email_used">E-mail adresa ili lozinka nisu pravilno uneti.</string>
    <string name="signin">PRIJAVI SE</string>
    <string name="message" />
    <string name="name">Ime</string>
    <string name="name_empty">Ime mora biti uneto.</string>
    <string name="surname">Prezime</string>
    <string name="surname_empty">Prezime mora biti uneto.</string>
    <string name="phone">Telefon</string>
    <string name="phone_empty">Telefon mora biti unet.</string>
    <string name="phone_used">Telefonski broj je već u upotrebi.</string>
    <string name="email">E-mail</string>
    <string name="email_empty">E-mail mora biti unet.</string>
    <string name="email_used">E-mail adresa je već u upotrebi.</string>
    <string name="email_format">Format e-mail adrese nije validan.</string>
    <string name="register">REGISTRUJ SE</string>
    <string name="signup">Registracija</string>
    <string name="buttonNotifications">Obaveštenja</string>
    <string name="buttonHome">Početna</string>
    <string name="buttonOffer">Ponudi</string>
    <string name="buttonBook">Bukiraj ponudu</string>
    <string name="buttonSearch">Traži</string>
    <string name="buttonReset">Obriši</string>
    <string name="buttonProfile">Profil</string>
    <string name="buttonBack">Nazad</string>
    <string name="labelText1">MOJA PONUDA</string>
    <string name="locations">Lokacije</string>
    <string name="labelDepLoc" translatable="false">Mesto polaska</string>
    <string name="labelDepLoc_empty">Mesto polaska mora biti uneta.</string>
    <string name="labelArrLoc" translatable="false">Mesto dolaska</string>
    <string name="labelArrLoc_empty">Mesto dolaska mora biti uneta.</string>
    <string name="labelDate">Datum polaska</string>
    <string name="labelDate_empty">Datum polaska mora biti unet.</string>
    <string name="labelTime">Vreme polaska</string>
    <string name="labelTime_empty">Vreme polaska mora biti uneto.</string>
    <string name="profile">Ime i prezime</string>
    <string name="bookings">Bookings</string>
    <string name="commentsMarks">Komentari i ocene</string>
    <string name="moje_ponude">Moje ponude</string>
    <string name="selectLanguageDialogTitle">Selektujte jezike koje govorite.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message3">Uspesno ste se registrovali! :)</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="hello_bobi">Hello Bobi :D</string>
    <string name="textViewText">Large Text</string>
    <string name="vehiclenumber">Registracioni broj vozila</string>
    <string name="vehiclenumber_empty">Registracioni broj vozila mora biti unet.</string>
    <string name="vehicletype">Tip vozila</string>
    <string name="vehicle">Prevozno sredstvo</string>
    <string name="station">Međustanica</string>
    <string name="stationsAre">Međustanice:</string>
    <string name="stations">Međustanice</string>
    <string name="noStations">Nema</string>
    <string name="offerDescription">Opis ponude...</string>
    <string name="noOffers">Trenutno nema ponuda.</string>
    <string name="noBookings">Trenutno nema booking ponuda.</string>
    <string name="addStations">Unesite međustanice</string>
    <string name="language">Jezici</string>
    <string name="buttonMultiSpinner">Izaberi jezike</string>
    <string name="userLanguages">Jezici koje vozač govori</string>
    <string name="Dodaj">Dodaj</string>
    <string name="komentari">Komentari</string>
    <string name="driverDate">Podaci o vozaču</string>

</resources>
