<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/buttonHome"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/buttonSearch"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_offer"
        android:enabled="true"
        android:icon="@drawable/ic_offer"
        android:title="@string/buttonOffer"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/buttonNotifications"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/buttonProfile"
        app:showAsAction="ifRoom"
        />

</menu>