<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.toshiba.prenosrobe.activities.Home">

    <ListView
        android:id="@+id/ListViewHome"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true" />


    <Button
        android:id="@+id/buttonOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonProfile"
        android:layout_alignLeft="@+id/buttonProfile"
        android:layout_alignStart="@+id/buttonProfile"
        android:layout_marginBottom="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="25dp"
        android:text="@string/buttonOffer"
        app:layout_constraintBottom_toTopOf="@+id/buttonProfile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonOffer"
        android:layout_alignBottom="@+id/buttonOffer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/buttonSearch"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonBack"
        android:layout_alignBottom="@+id/buttonBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/buttonProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSearch"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttonSearch"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/ListViewHome"
        android:layout_centerHorizontal="true"
        android:gravity="center" />
</RelativeLayout>
