<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.toshiba.prenosrobe.activities.ProfileActivity"
    android:background="@color/colorbackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/gradientbackgorund"
            android:orientation="vertical">

            <br.com.bloder.magic.view.MagicButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/magicButton"
                app:button_icon="@drawable/ic_logout"
                app:magic_button_size="25dp"
                app:button_icon_width="25dp"
                app:button_icon_height="25dp"
                app:hide_text="Logout"
                app:hide_text_size="8dp"
                app:hide_text_color="@color/colorPrimaryDark"
                app:icon_button_color="@color/colorAccent"
                app:expandable_area_color="@color/colorAccent"
                >

            </br.com.bloder.magic.view.MagicButton>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/NameSurname"
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center"
            android:text="@string/profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:background="@color/colorbackground">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_email_black_24dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/Email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_phone_black_24dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/Phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/phone"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp"
            android:background="@color/colorbackground"
            android:id="@+id/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:background="@color/colorbackground">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/buttonBookings"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/buttonstylegradient"
                        android:onClick="ChangeFragment"
                        android:text="@string/bookings"
                        android:textColor="#000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/buttonMyOffer"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/buttonstylegradient"
                        android:onClick="ChangeFragment"
                        android:text="@string/moje_ponude"
                        android:textColor="#000" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <fragment
            android:id="@+id/fragmentBookings"
            android:name="com.example.toshiba.prenosrobe.fragments.FragmentBookings"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_above="@+id/frameLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/frameLayout">

            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_navigation"
                app:itemBackground="@color/colorPrimary"
                app:itemIconTint="@drawable/nav_item_color_state"
                app:itemTextColor="@drawable/nav_item_color_state"
                app:menu="@menu/bottom_navigation_main"/>

        </FrameLayout>

    </RelativeLayout>


</LinearLayout>
